--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@ html{
     width: 100%;
     height: 100%;
     display: flex;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
@@ -101,12 +102,6 @@ button span{
     margin-left: 10px;
 }
 
-.card span{
-    position: absolute;
-    right: 10px;
-    top: 10px;
-}
-
 .card{
     width: 392px;
     height: 575.75px;
@@ -119,6 +114,19 @@ button span{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.card span{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.card .card-face span.questionUpperText{
+    width: inherit;
+    text-align: center;
+    font-weight: 700;
+    font-size: 12px;
 }
 
 .card img{
@@ -178,18 +186,21 @@ button span{
     align-items: center;
 }
 
-.card .container span{
+.card .container button{
     font-weight: 400;
     margin: auto 0;
     position: unset;
     font-size: 10px;
     line-height: 12px;
     text-align: center;
+    width: 90%;
+    background-color: transparent;
+    border-color: transparent;
 }
 .card p{
     width: 80%;
     height: fit-content;
-    text-align: justify;
+    text-align: center;
 }
 
 .card.black{
@@ -238,8 +249,27 @@ button span{
     border-radius: 12px;
 }
 
+.results{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 
-
+.main-text{
+    color: #000000;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 16px;
+}
 .hidden{
     display: none;
 }
